# pipebridge

./: .gitignore  CHANGELOG.md  Credentials.py  LICENSE  MANIFEST.in  MUTATION UPDATES.txt  PYPI_README.md  README.md  prompt continuacao4.txt  prompt continuação.txt  prompt continuação2.txt  prompt continuação3.txt  prompt continuação5.txt  prompt continuação6.txt  prompt continuação7.txt  prompt para criar regras dinamicas de validacaoL.txt  pyproject.py  pyproject.toml  tree.txt
.aiassistant/rules/: AGENTS.md  projetct-context.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
Tests/: TestesIsolados.py  TestesIsolados2.py  cardService.py  fileService.py  phaseService.py  pipService.py
Tests/downloads_test/: 15-Novo_test_file.txt  advanced_config_test.txt
bks/: cardServicebk.py  cardbk.py  fileServicebk.py  phaseServicebk.py  pipeServicebk.py
docs/: Makefile  api.rst  conf.py  development.rst  index.rst  make.bat  quickstart.rst  use-cases.rst
docs/_static/: custom.css
scripts/: validate_release_metadata.py
secret/: pipefy_automation_factory.json  secret.key
secret - Copia/: pipefy.json
src/pipebridge/: __init__.py
src/pipebridge/builders/: queryBuilder.py
src/pipebridge/card_validation/: cardValidation.py
src/pipebridge/client/: httpClient.py  (+1 more)
src/pipefy/: __init__.py
tests/: conftest.py  live_examples.py
tests/functional/: test_public_api.py
tests/integration/: test_card_move_flow.py  test_card_service.py  test_card_update_flow.py  test_connector_service.py  test_file_service.py  test_phase_service.py  test_pipe_service.py
tests/unit/: test_card_mutations.py  test_connector_card_read.py  test_connector_discovery_service.py  test_connector_safe_creation.py  test_connector_schema_foundation.py  test_connector_semantic_updates.py  test_file_field_resolution.py  test_model_helpers.py  test_phase_schema_helpers.py  test_pipe_schema_cache.py  test_pipe_service_catalog.py  test_resolve_card_field_updates_step.py  test_transport_config.py
useCases/: README.md  card_move_safely.py  card_update_current_phase.py  card_update_with_extra_rules.py  common.py  connector_discovery_and_update.py  connector_full_catalog_demo.py  custom_card_update_handler.py  file_upload_download.py  file_upload_with_custom_steps.py  file_upload_with_rules_and_policies.py  pipe_cascade_inspection.py  pipe_field_catalog.py  start_form_create_move_fill.py
(+257 files in other folders)
